--- a/pharmacies/pharmacies/blueprint/v1/docs/patient.yaml
+++ b/pharmacies/pharmacies/blueprint/v1/docs/patient.yaml
@@ -1,9 +1,13 @@
 tags:
-- "Transações"
-summary: "Mostrar todos as Transações."
-description: "Essa rota retorna os dados de todas as transações."
+- "Pacientes"
+summary: "Filtrar Pacientes"
+description: "Essa rota filtra por nome de possiveis pacientes."
 produces:
 - "application/json"
+parameters:
+  - name: "name"
+    in: "path"
+    type: "string"
 
 responses:
   "200":
