--- a/pharmacies/pharmacies/blueprint/v1/docs/pharmacie.yaml
+++ b/pharmacies/pharmacies/blueprint/v1/docs/pharmacie.yaml
@@ -1,9 +1,13 @@
 tags:
-- "Transações"
-summary: "Mostrar todos as Transações."
-description: "Essa rota retorna os dados de todas as transações."
+- "Farmacias"
+summary: "Filtrar farmacia"
+description: "Essa rota filtra por possiveis farmacias."
 produces:
 - "application/json"
+parameters:
+  - name: "farmacias"
+    in: "path"
+    type: "string"
 
 responses:
   "200":
