--- a/pharmacies/pharmacies/blueprint/v1/docs/pharmacies.yaml
+++ b/pharmacies/pharmacies/blueprint/v1/docs/pharmacies.yaml
@@ -1,24 +1,19 @@
 tags:
-- "Article"
-summary: "Mostrar Farmacias"
+- "Farmacias"
+summary: "Mostrar todos as farmacias cadastradas."
 description: "Essa rota retorna os dados de todas as farmacias."
 produces:
 - "application/json"
-parameters:
-  - name: "name"
-    in: "path"
-    minimum: 1
-    type: "integer"
 
 responses:
   "200":
-    description: "Artigo excluido com sucesso."
+    description: "Filtro aplicado"
   "404":
     description: "Falha de requisição"
     schema:
       type: "object"
       properties:
-        Mensagem:
+        mensagem:
           type: "string"
-        Adicional:
-          type: "string"
+        status_code:
+          type: "integer"
