--- a/pharmacies/pyproject.toml
+++ b/pharmacies/pyproject.toml
@@ -11,6 +11,7 @@ SQLAlchemy = "^1.4.40"
 marshmallow = "^3.17.1"
 psycopg2-binary = "^2.9.3"
 flasgger = "^0.9.5"
+flake8 = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
