--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ marshmallow = "^3.17.1"
 psycopg2-binary = "^2.9.3"
 flasgger = "^0.9.5"
 flake8 = "^5.0.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
